--- a/SimulacionTrafico.csproj
+++ b/SimulacionTrafico.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Car.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Street.cs" />
     <Compile Include="TrafficLight.cs" />
   </ItemGroup>
   <ItemGroup>
