--- a/SimulacionTrafico.csproj
+++ b/SimulacionTrafico.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Street.cs" />
     <Compile Include="TrafficLight.cs" />
+    <Compile Include="TrafficSimulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
